# g2o

./: CMakeLists.txt
g2o/apps/g2o_cli/: CMakeLists.txt
g2o/core/: CMakeLists.txt  base_binary_edge.h  base_binary_edge.hpp  base_multi_edge.h  base_unary_edge.h  batch_stats.cpp  batch_stats.h  block_solver.h  hyper_graph.h  jacobi_solver.h  jacobi_solver.hpp  linear_solver.h  optimizable_graph.h  optimization_algorithm_levenberg.cpp  optimization_algorithm_levenberg.h  solver.h  sparse_optimizer.cpp  sparse_optimizer.h
g2o/examples/ba/: CMakeLists.txt  ba_benchmark.cpp  ba_demo.cpp  ba_demo_block.cpp  test_solver.cpp
g2o/solvers/eigen/: CMakeLists.txt  linear_solver_pcg_eigen.h  solver_eigen.cpp
g2o/solvers/pcg/: linear_solver_pcg.hpp
g2o/types/sba/: types_six_dof_expmap.cpp
